--- a/src/app/contact-info/employees/employees.component.scss
+++ b/src/app/contact-info/employees/employees.component.scss
@@ -9,11 +9,14 @@
 .employee {
 	margin: 6vh 5vw;
 	display: flex;
-	height: 20vh;
+	$mrgin: 2vh 2vw;
 	.content {
-		margin: 2vh 3vw;
+		margin: $mrgin;
+		height: 100%;
 	}
 	img {
-		height: 100%;
+		margin: $mrgin;
+		height: 130px;
+		width: auto;
 	}
 }
